github-action-service/main/default/objects/GitHub_App_Settings__mdt/GitHub_App_Settings__mdt.object-meta.xml
<CustomObject>
    <label>GitHub App Settings</label>
    <pluralLabel>GitHub App Settings</pluralLabel>
</CustomObject>