github-action-service/main/default/objects/GitHub_App_Settings__mdt/fields/App_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Id__c</fullName>
    <label>App Id</label>
    <description>GitHub App ID (numeric, e.g., 123456)</description>
    <inlineHelpText
  >Enter your GitHub App ID. You can find this in your GitHub App settings.</inlineHelpText>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>