github-action-service/main/default/objects/GitHub_App_Settings__mdt/fields/Installation_Id__c.field-meta.xml
<CustomField>
    <fullName>Installation_Id__c</fullName>
    <label>Installation Id</label>
    <description>GitHub App Installation ID (numeric)</description>
    <inlineHelpText
  >Enter the Installation ID for your GitHub App. This is obtained after installing the app on your repository.</inlineHelpText>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>