github-action-service/main/default/objects/GitHub_App_Settings__mdt/fields/Private_Key_Base64__c.field-meta.xml
<CustomField>
    <fullName>Private_Key_Base64__c</fullName>
    <label>Private Key Base64</label>
    <description
  >GitHub App private key encoded in Base64 format (without PEM headers/footers)</description>
    <inlineHelpText
  >Store the GitHub App private key in Base64 format. Remove BEGIN/END lines and newlines from the PEM file first.</inlineHelpText>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>