github-action-service/main/default/objects/GitHub_App_Settings__mdt/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <label>Webhook Secret</label>
    <description
  >Secret used to verify webhook signatures from GitHub</description>
    <inlineHelpText
  >Enter the webhook secret configured in your GitHub App. This is used to verify incoming webhooks.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>